Updated to use new MangoBotGradle and tooling...